# tv-backend-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  gunicorn_config.py  main.py  pyproject.toml
apps/: __init__.py
apps/content/: __init__.py  router.py
apps/device_management/: __init__.py  router.py
apps/genres/: __init__.py  router.py
apps/synchronization/: __init__.py  router.py
apps/users/: __init__.py  router.py
apps/users_actions/: __init__.py  router.py
auth/: __init__.py  security.py
models/: __init__.py  common_engine.py  run_migrations.py  user_content_device_models.py
templates/: watching.html
utils/log_utils/: __init__.py  config.py  custom_logs_class.py
utils/response/: __init__.py  response.py
