[tool.poetry]
name = "tv-backend-server"
version = "0.1.0"
description = ""
authors = ["Abdallah Ashraf"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.2"}
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
