[tool.poetry]
name = "tv-backend-server"
version = "0.1.0"
description = ""
authors = ["Abdallah Ashraf"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.2"}
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.29"
mysql-connector-python = "^8.3.0"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^2.7.0"}
passlib = "^1.7.4"
bcrypt = "4.0.1"
websockets = "^12.0"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
